# System_to_Matlab

./: .gitignore  Aufgabe1.ipynb  BUGS.txt  DynamicSymbols^_Sicherung.py  DynamicSymbols_Sicherung.py  LICENSE  Mögliche_Erweiterungen.txt  README.md  Test.ipynb  Test_no_System.ipynb  Test_syms.ipynb  Testfile_1.ipynb  Testfile_1_Referenz.ipynb  pyproject.toml  test_System.py  test_Var_helper.py
Modules/: DynamicSymbols.py  Robotik_System.py  __init__.py  mypy.ini
Modules/FileGenerators/: FileGenerators.py  MFile.py  MFunction.py  SFunction.py
Modules/HelperFunctions/: GeneralHelperFuncitons.py  RobotikHelperFuncitons.py  __init__.py
Modules/Symbols/: DynamicSymbol.py  DynamicSymbols.py  StaticSymbol.py  StaticSymbols.py  Symbol.py  Symbols.py  __init__.py
Modules/Systems/: DynamicSystem.py  Robotik_System.py  StaticSystem.py  System.py
Modules/Tests/: test_System.py  test_Var_helper.py
System_to_Matlab/: __init__.py
System_to_Matlab/Calculation/: Calculation.py  __init__.py
System_to_Matlab/FileGenerators/: FileGenerators.py  MFile.py  MFunction.py  SFunction.py  __init__.py
System_to_Matlab/HelperFunctions/: GeneralHelperFuncitons.py  RobotikHelperFuncitons.py  __init__.py
System_to_Matlab/Symbols/: DynamicSymbol.py  StaticSymbol.py  Symbol.py
System_to_Matlab/Systems/: DynamicSystem.py  StaticSystem.py  System.py  _System.py  __init__.py
System_to_Matlab/tests/: test_Calculation.py  test_CodeElement.py  test_DynamicSymbol.py  test_DynamicSystem.py  test_StaticSymbol.py  test_StaticSystem.py  test_StringElement.py
(+16 files in other folders)
